--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
